--- a/res/layout/choose_player.xml
+++ b/res/layout/choose_player.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="@drawable/background">
 
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/choosePlayer"
+            android:textSize="@dimen/wordSize"
+            android:id="@+id/textView" android:layout_gravity="center_horizontal|top"/>
 
     <LinearLayout
             android:orientation="vertical"
@@ -17,4 +23,5 @@
     </LinearLayout>
 
 
-</LinearLayout>
+
+</FrameLayout>
