--- a/res/layout/start_activity.xml
+++ b/res/layout/start_activity.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
@@ -11,9 +11,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/btnStart"
-            android:layout_gravity="center"
-                    android:background="@drawable/start_name"
+
+            android:layout_gravity="center|left"
+                    android:background="@drawable/game_name"
 
           />
 
-</LinearLayout>
+</FrameLayout>
