active card bottom buttons placement updated

--- a/res/layout/active_card.xml
+++ b/res/layout/active_card.xml
@@ -136,23 +136,23 @@
             android:id="@+id/txtWord8"/>
 </LinearLayout>
 
-    <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center">
+    <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
         <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/back_button"
                 android:background="@android:color/transparent"
-                android:id="@+id/btnGetPreviousCard" android:layout_gravity="center_horizontal"/>
+                android:id="@+id/btnGetPreviousCard" android:layout_gravity="left|bottom"/>
         <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/forward_button"
                 android:background="@android:color/transparent"
-                android:id="@+id/btnGetNextCard" android:layout_gravity="center_horizontal"/>
+                android:id="@+id/btnGetNextCard" android:layout_gravity="right|bottom"/>
 
-    </LinearLayout>
+    </FrameLayout>
 
 </LinearLayout>
