--- a/res/layout/active_card.xml
+++ b/res/layout/active_card.xml
@@ -39,102 +39,121 @@
                 android:id="@+id/cardID" android:layout_gravity="center_horizontal"/>
     </LinearLayout>
 
-    <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_gravity="left">
 
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/defaultWord"
-                android:textSize="@dimen/wordSize"
 
-                android:paddingBottom="@dimen/wordPaddingBottom"
-                android:id="@+id/txtWord1"/>
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/defaultWord"
-                android:textSize="@dimen/wordSize"
-                android:paddingBottom="@dimen/wordPaddingBottom"
-                android:id="@+id/txtWord2"/>
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/defaultWord"
-                android:textSize="@dimen/wordSize"
-                android:paddingBottom="@dimen/wordPaddingBottom"
-                android:id="@+id/txtWord3"/>
-    </LinearLayout>
 
     <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_gravity="right">
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/defaultWord"
-                android:textSize="@dimen/wordSize"
-                android:paddingBottom="@dimen/wordPaddingBottom"
-                android:id="@+id/txtWord4"/>
-
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/defaultWord"
-                android:textSize="@dimen/wordSize"
-                android:paddingBottom="@dimen/wordPaddingBottom"
-                android:id="@+id/txtWord5"/>
-    </LinearLayout>>
-
-    <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_gravity="left">
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/defaultWord"
-                android:textSize="@dimen/wordSize"
-                android:textColor="@color/wordOnActiveCard"
-                android:textColorHighlight="@android:color/widget_edittext_dark"
-                android:paddingBottom="@dimen/wordPaddingBottom"
-                android:id="@+id/txtWord6"/>
-    </LinearLayout>
-
-    <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_gravity="right">
-
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/defaultWord"
-                android:textSize="@dimen/wordSize"
-                android:paddingBottom="@dimen/wordPaddingBottom"
-                android:id="@+id/txtWord7"/>
-    </LinearLayout>
-
-    <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_gravity="left">
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="left"
             android:text="@string/defaultWord"
             android:textSize="@dimen/wordSize"
-            android:paddingBottom="@dimen/wordPaddingBottom"
-            android:id="@+id/txtWord8"/>
-</LinearLayout>
+
+            >
+        <Button
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="@string/defaultWord"
+                android:id="@+id/btnBlock1"
+                android:textAlignment="gravity"
+                android:gravity="left|center"
+                android:src="@drawable/worlds_frame"
+                />
+
+        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                android:src="@drawable/points_three_inactive" android:id="@+id/imgPointsBlock1"/>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="right">
+
+        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                   android:src="@drawable/points_two_inactive" android:id="@+id/imgPointsBlock2"/>
+        <Button
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="@string/defaultWord"
+                android:id="@+id/btnBlock2"
+                android:textAlignment="gravity"
+                android:gravity="right|center"
+                android:src="@drawable/worlds_frame"
+                android:layout_weight="2"/>
+    </LinearLayout>
+
+    <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="left"
+            android:text="@string/defaultWord"
+            android:textSize="@dimen/wordSize"
+
+            >
+        <Button
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="@string/defaultWord"
+                android:id="@+id/btnBlock3"
+                android:textAlignment="gravity"
+                android:gravity="left|center"
+                android:src="@drawable/worlds_frame"
+                android:layout_weight="2"
+                />
+        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                   android:src="@drawable/points_two_inactive" android:id="@+id/imgPointsBlock3"/>
+    </LinearLayout>
+
+
+    <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="right">
+
+        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                   android:src="@drawable/points_five_inactive" android:id="@+id/imgPointsBlock4"/>
+
+        <Button
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="@string/defaultWord"
+                android:id="@+id/btnBlock4"
+                android:textAlignment="gravity"
+                android:gravity="right|center"
+                android:src="@drawable/worlds_frame"
+                android:layout_weight="2"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="left"
+            android:text="@string/defaultWord"
+            android:textSize="@dimen/wordSize"
+
+            >
+        <Button
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="@string/defaultWord"
+                android:id="@+id/btnBlock5"
+                android:textAlignment="gravity"
+                android:gravity="left|center"
+                android:src="@drawable/worlds_frame"
+                android:layout_weight="1"/>
+
+        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                   android:src="@drawable/points_seven_inactive" android:id="@+id/imgBlock5"/>
+
+    </LinearLayout>
 
     <FrameLayout
             android:layout_width="match_parent"
