--- a/res/layout/active_card.xml
+++ b/res/layout/active_card.xml
@@ -61,7 +61,7 @@
                 android:src="@drawable/worlds_frame"
                 />
 
-        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
+        <ImageView android:layout_width="wrap_content" android:layout_height="match_parent"
                 android:src="@drawable/points_block1_inactive" android:id="@+id/imgPointsBlock1"/>
 
 
@@ -73,7 +73,7 @@
             android:orientation="horizontal"
             android:layout_gravity="right">
 
-        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
+        <ImageView android:layout_width="wrap_content" android:layout_height="match_parent"
                    android:src="@drawable/points_block2_inactive" android:id="@+id/imgPointsBlock2"/>
         <Button
                 android:layout_width="wrap_content"
@@ -105,7 +105,7 @@
                 android:src="@drawable/worlds_frame"
                 android:layout_weight="2"
                 />
-        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
+        <ImageView android:layout_width="wrap_content" android:layout_height="match_parent"
                    android:src="@drawable/points_block2_inactive" android:id="@+id/imgPointsBlock3"/>
     </LinearLayout>
 
@@ -116,7 +116,7 @@
             android:orientation="horizontal"
             android:layout_gravity="right">
 
-        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
+        <ImageView android:layout_width="wrap_content" android:layout_height="match_parent"
                    android:src="@drawable/points_block4_inactive" android:id="@+id/imgPointsBlock4"/>
 
         <Button
@@ -150,7 +150,7 @@
                 android:src="@drawable/worlds_frame"
                 android:layout_weight="1"/>
 
-        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
+        <ImageView android:layout_width="wrap_content" android:layout_height="match_parent"
                    android:src="@drawable/points_block5_inactive" android:id="@+id/imgPointsBlock5"/>
 
     </LinearLayout>
