--- a/res/layout/active_card.xml
+++ b/res/layout/active_card.xml
@@ -6,6 +6,7 @@
               android:layout_height="match_parent"
               android:background="@drawable/background"
               android:paddingLeft="@dimen/wordPaddingLeft"
+              android:layout_gravity="center"
         >
 
     <LinearLayout
@@ -24,7 +25,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingRight="10dp"
-                android:paddingLeft="10dp"
                 android:id="@+id/nameOfPlayer" android:layout_gravity="center_horizontal"/>
         <TextView
                 android:layout_width="wrap_content"
@@ -34,12 +34,16 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingRight="10dp"
                 android:paddingLeft="10dp"
                 android:id="@+id/cardID" android:layout_gravity="center_horizontal"/>
     </LinearLayout>
 
 
+
+    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal">
+        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                  android:text="@string/block1" android:textSize="@dimen/textSizeOfTaskOnActiveCard" android:textColor="@android:color/black"/>
+    </LinearLayout>
 
 
     <LinearLayout
@@ -51,21 +55,37 @@
             android:textSize="@dimen/wordSize"
 
             >
-        <Button
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="@string/defaultWord"
-                android:id="@+id/btnBlock1"
-                android:textAlignment="gravity"
-                android:gravity="left|center"
-                android:src="@drawable/worlds_frame"
-                />
+
+            <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/defaultWord"
+                    android:id="@+id/btnBlock1"
+                    android:textAlignment="gravity"
+                    android:gravity="left|center"
+                    android:src="@drawable/worlds_frame"
+                    />
+
+
 
         <ImageView android:layout_width="wrap_content" android:layout_height="match_parent"
                 android:src="@drawable/points_block1_inactive" android:id="@+id/imgPointsBlock1"/>
 
 
     </LinearLayout>
+
+
+    <LinearLayout android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:orientation="horizontal"
+            android:layout_gravity="right">
+
+
+        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                  android:text="@string/block2"
+                android:gravity="left" android:textSize="@dimen/textSizeOfTaskOnActiveCard" android:textColor="@android:color/black"/>
+    </LinearLayout>
+
 
     <LinearLayout
             android:layout_width="wrap_content"
@@ -84,6 +104,17 @@
                 android:gravity="right|center"
                 android:src="@drawable/worlds_frame"
                 android:layout_weight="2"/>
+    </LinearLayout>
+
+
+    <LinearLayout android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:orientation="horizontal"
+                  android:layout_gravity="left">
+
+
+        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                  android:text="@string/block3" android:textSize="@dimen/textSizeOfTaskOnActiveCard" android:textColor="@android:color/black"/>
     </LinearLayout>
 
     <LinearLayout
@@ -106,10 +137,19 @@
                 android:layout_weight="2"
                 />
         <ImageView android:layout_width="wrap_content" android:layout_height="match_parent"
-                   android:src="@drawable/points_block2_inactive" android:id="@+id/imgPointsBlock3"/>
+                   android:src="@drawable/points_block3_inactive" android:id="@+id/imgPointsBlock3"/>
     </LinearLayout>
 
 
+    <LinearLayout android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:orientation="horizontal"
+                  android:layout_gravity="right">
+
+
+        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                  android:text="@string/block4" android:textSize="@dimen/textSizeOfTaskOnActiveCard" android:textColor="@android:color/black"/>
+    </LinearLayout>
     <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -131,6 +171,16 @@
 
     </LinearLayout>
 
+
+    <LinearLayout android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:orientation="horizontal"
+                  android:layout_gravity="left">
+
+
+        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                  android:text="@string/block5" android:textSize="@dimen/textSizeOfTaskOnActiveCard" android:textColor="@android:color/black"/>
+    </LinearLayout>
     <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
