--- a/res/values/dimension.xml
+++ b/res/values/dimension.xml
@@ -5,5 +5,7 @@
     <dimen name="wordPaddingLeft">10dp</dimen>
     <dimen name="textSizeOnButtons">10dp</dimen>
     <dimen name="widthOfButtonWithTextOnActiveCard">150dp</dimen>
+    <dimen name="textSizeOfTaskOnActiveCard">8dp</dimen>
+    <dimen name="textSizeOnBlockButtonsOnActiveCard">10dp</dimen>
 
 </resources>
