--- a/res/layout/active_card.xml
+++ b/res/layout/active_card.xml
@@ -40,10 +40,6 @@
 
 
 
-    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal">
-        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-                  android:text="@string/block1" android:textSize="@dimen/textSizeOfTaskOnActiveCard" android:textColor="@android:color/black"/>
-    </LinearLayout>
 
 
     <LinearLayout
@@ -52,7 +48,6 @@
             android:orientation="horizontal"
             android:layout_gravity="left"
             android:text="@string/defaultWord"
-            android:textSize="@dimen/wordSize"
 
             >
 
@@ -64,13 +59,21 @@
                     android:textAlignment="gravity"
                     android:gravity="left|center"
                     android:src="@drawable/worlds_frame"
+                    android:layout_weight="0"
+
                     />
 
 
 
         <ImageView android:layout_width="wrap_content" android:layout_height="match_parent"
-                android:src="@drawable/points_block1_inactive" android:id="@+id/imgPointsBlock1"/>
+                android:src="@drawable/points_block1_inactive" android:id="@+id/imgPointsBlock1" android:layout_weight="0"/>
 
+        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_gravity="center">
+            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                      android:text="@string/block1" android:textSize="@dimen/textSizeOfTaskOnActiveCard"
+                      android:textColor="@android:color/black" android:layout_weight="1"
+                     />
+        </LinearLayout>
 
     </LinearLayout>
 
@@ -81,9 +84,7 @@
             android:layout_gravity="right">
 
 
-        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-                  android:text="@string/block2"
-                android:gravity="left" android:textSize="@dimen/textSizeOfTaskOnActiveCard" android:textColor="@android:color/black"/>
+
     </LinearLayout>
 
 
@@ -93,17 +94,24 @@
             android:orientation="horizontal"
             android:layout_gravity="right">
 
-        <ImageView android:layout_width="wrap_content" android:layout_height="match_parent"
-                   android:src="@drawable/points_block2_inactive" android:id="@+id/imgPointsBlock2"/>
+        <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
+                  android:text="@string/block2"
+                  android:gravity="left|center" android:textSize="@dimen/textSizeOfTaskOnActiveCard"
+                  android:textColor="@android:color/black"
+                  android:layout_weight="1"/>
+
+
+        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center"
+                   android:src="@drawable/points_block2_inactive" android:id="@+id/imgPointsBlock2"
+                   android:layout_weight="0"/>
         <Button
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:text="@string/defaultWord"
                 android:id="@+id/btnBlock2"
                 android:textAlignment="gravity"
                 android:gravity="right|center"
-                android:src="@drawable/worlds_frame"
-                android:layout_weight="2"/>
+                android:src="@drawable/worlds_frame" android:layout_weight="0"/>
     </LinearLayout>
 
 
@@ -113,8 +121,7 @@
                   android:layout_gravity="left">
 
 
-        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-                  android:text="@string/block3" android:textSize="@dimen/textSizeOfTaskOnActiveCard" android:textColor="@android:color/black"/>
+
     </LinearLayout>
 
     <LinearLayout
@@ -123,21 +130,24 @@
             android:orientation="horizontal"
             android:layout_gravity="left"
             android:text="@string/defaultWord"
-            android:textSize="@dimen/wordSize"
-
-            >
+                    >
         <Button
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:text="@string/defaultWord"
                 android:id="@+id/btnBlock3"
                 android:textAlignment="gravity"
                 android:gravity="left|center"
                 android:src="@drawable/worlds_frame"
-                android:layout_weight="2"
+                android:layout_weight="0"
                 />
         <ImageView android:layout_width="wrap_content" android:layout_height="match_parent"
-                   android:src="@drawable/points_block3_inactive" android:id="@+id/imgPointsBlock3"/>
+                   android:src="@drawable/points_block3_inactive" android:id="@+id/imgPointsBlock3"
+                   android:layout_weight="0"/>
+
+        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                  android:text="@string/block3" android:textSize="@dimen/textSizeOfTaskOnActiveCard"
+                  android:textColor="@android:color/black" android:layout_weight="1" android:layout_gravity="center"/>
     </LinearLayout>
 
 
@@ -147,27 +157,34 @@
                   android:layout_gravity="right">
 
 
-        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-                  android:text="@string/block4" android:textSize="@dimen/textSizeOfTaskOnActiveCard" android:textColor="@android:color/black"/>
+
     </LinearLayout>
     <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_gravity="right">
+            android:layout_gravity="right|center">
 
-        <ImageView android:layout_width="wrap_content" android:layout_height="match_parent"
-                   android:src="@drawable/points_block4_inactive" android:id="@+id/imgPointsBlock4"/>
+        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                  android:text="@string/block4" android:textSize="@dimen/textSizeOfTaskOnActiveCard"
+                  android:textColor="@android:color/black" android:layout_gravity="center"
+                  android:layout_weight="1"/>
+
+        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                   android:src="@drawable/points_block4_inactive"
+                   android:id="@+id/imgPointsBlock4" android:layout_gravity="center"
+                   android:layout_weight="0"/>
 
         <Button
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:text="@string/defaultWord"
                 android:id="@+id/btnBlock4"
                 android:textAlignment="gravity"
                 android:gravity="right|center"
                 android:src="@drawable/worlds_frame"
-                android:layout_weight="2"/>
+                android:layout_weight="0"
+                />
 
     </LinearLayout>
 
@@ -178,8 +195,7 @@
                   android:layout_gravity="left">
 
 
-        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-                  android:text="@string/block5" android:textSize="@dimen/textSizeOfTaskOnActiveCard" android:textColor="@android:color/black"/>
+
     </LinearLayout>
     <LinearLayout
             android:layout_width="wrap_content"
@@ -187,21 +203,28 @@
             android:orientation="horizontal"
             android:layout_gravity="left"
             android:text="@string/defaultWord"
-            android:textSize="@dimen/wordSize"
-
             >
+
         <Button
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:text="@string/defaultWord"
                 android:id="@+id/btnBlock5"
                 android:textAlignment="gravity"
                 android:gravity="left|center"
                 android:src="@drawable/worlds_frame"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+               />
 
-        <ImageView android:layout_width="wrap_content" android:layout_height="match_parent"
-                   android:src="@drawable/points_block5_inactive" android:id="@+id/imgPointsBlock5"/>
+        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                   android:src="@drawable/points_block5_inactive"
+                   android:id="@+id/imgPointsBlock5" android:layout_gravity="center"
+                   android:layout_weight="0"/>
+
+        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                  android:text="@string/block5" android:textSize="@dimen/textSizeOfTaskOnActiveCard"
+                  android:textColor="@android:color/black"
+                  android:layout_gravity="center" android:layout_weight="0"/>
 
     </LinearLayout>
 
