--- a/res/layout/active_card.xml
+++ b/res/layout/active_card.xml
@@ -238,6 +238,13 @@
                 android:src="@drawable/back_button"
                 android:background="@android:color/transparent"
                 android:id="@+id/btnGetPreviousCard" android:layout_gravity="left|bottom"/>
+
+        <TextView android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:text="00:00"
+                   android:id="@+id/tvTimerOnCard" android:layout_gravity="bottom|center" android:paddingBottom="20dp">
+
+        </TextView>
         <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
