--- a/res/layout/active_card.xml
+++ b/res/layout/active_card.xml
@@ -222,16 +222,21 @@
 
     </LinearLayout>
 
-    <FrameLayout
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:orientation="horizontal"
             >
-        <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/back_button"
-                android:background="@android:color/transparent"
-                android:id="@+id/btnGetPreviousCard" android:layout_gravity="left|bottom"/>
+        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1"
+                      android:layout_gravity="bottom|left" android:gravity="left">
+
+            <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/back_button"
+                    android:background="@android:color/transparent"
+                    android:id="@+id/btnGetPreviousCard" android:layout_gravity="left|bottom"/>
+        </LinearLayout>
 
         <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
@@ -239,13 +244,17 @@
                    android:id="@+id/tvTimerOnCard" android:layout_gravity="bottom|center" android:paddingBottom="20dp">
 
         </TextView>
-        <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/forward_button"
-                android:background="@android:color/transparent"
-                android:id="@+id/btnGetNextCard" android:layout_gravity="right|bottom"/>
+        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="right"
+                      android:layout_gravity="bottom|right" android:layout_weight="1">
 
-    </FrameLayout>
+            <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/forward_button"
+                    android:background="@android:color/transparent"
+                    android:id="@+id/btnGetNextCard"/>
+        </LinearLayout>
+
+    </LinearLayout>
 
 </LinearLayout>
