--- a/res/layout/start_activity.xml
+++ b/res/layout/start_activity.xml
@@ -17,4 +17,10 @@
 
           />
 
+    <com.startapp.android.publish.banner.Banner
+            android:id="@+id/startAppBanner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"/>
+
 </FrameLayout>
